# pyhdb-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  ruff.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: ci-cd.instructions.md  docs.instructions.md  general.instructions.md  python.instructions.md  rust-arrow.instructions.md  rust-pyo3.instructions.md
.github/workflows/: ci.yml  codspeed.yml  labeler.yml  release.yml  safety-audit.yml  security.yml
crates/hdbconnect-arrow/: Cargo.toml  README.md
crates/hdbconnect-arrow/benches/: conversion.rs
crates/hdbconnect-arrow/src/: error.rs  lib.rs  profiling.rs  test_utils.rs
crates/hdbconnect-arrow/src/builders/: boolean.rs  decimal.rs  dispatch.rs  factory.rs  mod.rs  primitive.rs  string.rs  temporal.rs
crates/hdbconnect-arrow/src/conversion/: batch.rs  processor.rs
crates/hdbconnect-arrow/src/schema/: mapping.rs
crates/hdbconnect-arrow/src/traits/: builder.rs  mod.rs  row.rs  sealed.rs  streaming.rs
crates/hdbconnect-arrow/src/types/: arrow.rs  conversion.rs  mod.rs
crates/hdbconnect-mcp/: Cargo.toml  Dockerfile  README.md
crates/hdbconnect-mcp/benches/: cache_benchmarks.rs  cache_integration_benchmarks.rs
crates/hdbconnect-mcp/deploy/: hdbconnect-mcp.service
crates/hdbconnect-mcp/deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
crates/hdbconnect-mcp/src/: config.rs  constants.rs  error.rs  helpers.rs  lib.rs  main.rs  pool.rs  server.rs  types.rs  validation.rs
crates/hdbconnect-mcp/src/auth/: claims.rs  config.rs  error.rs  jwks.rs  jwt.rs  middleware.rs  mod.rs  oidc.rs  rbac.rs  tenant.rs  user_context.rs
crates/hdbconnect-mcp/src/cache/: config.rs  error.rs  key.rs  memory.rs  mod.rs  noop.rs  provider.rs  traced.rs
crates/hdbconnect-mcp/src/config/: builder.rs  dml.rs  env.rs  file.rs  mod.rs  procedure.rs  runtime.rs
crates/hdbconnect-mcp/src/observability/: metrics.rs  mod.rs  telemetry.rs
crates/hdbconnect-mcp/src/security/: mod.rs  query_guard.rs  schema_filter.rs
crates/hdbconnect-mcp/src/transport/: auth.rs  http.rs  mod.rs
crates/hdbconnect-py/: Cargo.toml  README.md
crates/hdbconnect-py/src/: config.rs  connection_statistics.rs  cursor_holdability.rs  error.rs  lib.rs  runtime.rs  tls.rs
crates/hdbconnect-py/src/async_support/: common.rs  connection.rs  cursor.rs  mod.rs  pool.rs  statement_cache.rs  tests.rs
crates/hdbconnect-py/src/connection/: builder.rs  mod.rs  py_builder.rs  state.rs  wrapper.rs
crates/hdbconnect-py/src/cursor/: state.rs  wrapper.rs
crates/hdbconnect-py/src/reader/: wrapper.rs
crates/hdbconnect-py/src/types/: cache.rs  conversion.rs  mod.rs
crates/hdbconnect-py/src/utils/: mod.rs  tls.rs  url_parser.rs
examples/notebooks/: 01_quickstart.ipynb  02_polars_analytics.ipynb  03_streaming_large_data.ipynb  04_performance_comparison.ipynb  05_builder_api.ipynb  06_tls_configuration.ipynb  07_connection_pooling.ipynb  08_advanced_features.ipynb  README.md
examples/python/: README.md  builder_async.py  builder_basic.py  builder_tls.py  cursor_holdability.py  ha_network_group.py  migration_guide.py  pool_builder.py
python/: README.md  pyproject.toml  ruff.toml
python/pyhdb_rs/: __init__.py  _core.pyi  dbapi.py  pandas.py  polars.py
python/pyhdb_rs/aio/: __init__.py  _core.pyi  polars.py
tests/python/: conftest.py  test_application_metadata.py  test_arrow.py  test_async.py  test_async_api.py  test_connection_statistics.py  test_cursor_state.py  test_dbapi.py  test_dbapi_types.py  test_exceptions.py  test_import_fallbacks.py  test_module_imports.py  test_pandas.py  test_polars.py  test_pool.py  test_stored_procedures.py  test_utils.py
tests/python/benchmarks/: __init__.py  conftest.py  test_baseline.py  test_pandas_integration.py  test_polars_integration.py
