[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bug-ops/pyhdb-rs"
authors = ["Andrei G <andrei.g@my.com>"]

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some lints that are too strict
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
multiple_crate_versions = "allow"

# Dependencies sorted ALPHABETICALLY - versions only
[workspace.dependencies]
arrow = { version = "57.1", default-features = false, features = ["ffi", "ipc"] }
arrow-array = "57.1"
arrow-buffer = "57.1"
arrow-data = "57.1"
arrow-schema = "57.1"
criterion = "0.8"
hdbconnect = "0.32"
parking_lot = "0.12.5"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py311"] }
pyo3-arrow = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = "2.5"
