[package]
name = "hdbconnect-arrow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Apache Arrow integration for hdbconnect SAP HANA driver"
keywords = ["sap", "hana", "arrow", "database", "analytics"]
categories = ["database", "api-bindings"]
authors.workspace = true

[lints]
workspace = true

[features]
default = []
async = ["dep:hdbconnect_async"]

# Dependencies sorted ALPHABETICALLY
[dependencies]
arrow = { workspace = true, features = ["ffi", "ipc"] }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
hdbconnect = { workspace = true }
hdbconnect_async = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "conversion"
harness = false
