[package]
name = "hdbconnect-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for SAP HANA database"
keywords = ["sap", "hana", "mcp", "ai", "database"]
categories = ["database", "command-line-utilities"]
authors.workspace = true
readme = "README.md"

[lib]
name = "hdbconnect_mcp"
path = "src/lib.rs"

[[bin]]
name = "hdbconnect-mcp"
path = "src/main.rs"

[[bench]]
name = "cache_benchmarks"
harness = false
required-features = ["cache"]

[[bench]]
name = "cache_integration_benchmarks"
harness = false
required-features = ["cache"]

[lints]
workspace = true

[features]
default = []
auth = [
    "dep:jsonwebtoken",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:parking_lot",
    "dep:tokio-util",
]
cache = ["dep:parking_lot"]
http = [
    "rmcp/server-side-http",
    "rmcp/transport-streamable-http-server",
    "dep:axum",
    "dep:tower-http",
    "dep:tokio-stream",
    "dep:tokio-util",
]
metrics = [
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
]
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"] }
deadpool = { workspace = true, features = ["managed", "rt_tokio_1"] }
futures = { workspace = true }
hdbconnect = { workspace = true }
hdbconnect_async = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"], optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "elicitation", "schemars"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "time"] }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "timeout"], optional = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
parking_lot = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
