[package]
name = "hdbconnect-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SAP HANA via hdbconnect"
publish = false  # Published to PyPI, not crates.io
readme = "README.md"
keywords = ["sap", "hana", "python", "database", "pyo3"]
categories = ["database", "api-bindings"]

[lib]
name = "hdbconnect"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["async"]
async = [
    "dep:pyo3-async-runtimes",
    "dep:deadpool",
    "hdbconnect-arrow/async",
]
test-utils = ["hdbconnect-arrow/test-utils"]

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
hdbconnect_async = { workspace = true }
hdbconnect-arrow = { workspace = true }
lru = { workspace = true }
parking_lot = { workspace = true }
percent-encoding = "2.3"
pyo3 = { workspace = true, features = ["extension-module", "abi3-py312", "generate-import-lib"] }
pyo3-arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
url = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Async dependencies (optional)
deadpool = { workspace = true, optional = true, features = ["rt_tokio_1", "managed"] }
pyo3-async-runtimes = { workspace = true, optional = true, features = ["tokio-runtime"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "pyo3_overhead"
harness = false
required-features = ["test-utils"]
